// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar and secondary navbar navbar with page nav button 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-left"
      >
        <a
          class="navbar-brand"
          href="#"
          title="Home"
        >
          Your Logo
        </a>
      </div>
       
      <div
        class="navbar-default"
      >
        <ul
          class="navbar-nav me-auto mt-2 mt-lg-0"
        >
          <li
            class="current"
          >
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
  </nav>
   
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    <div
      class="nav-menu-container"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`Navbar and secondary navbar navbar with site and page nav buttons 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-left"
      >
        <a
          class="navbar-brand"
          href="#"
          title="Home"
        >
          Your Logo
        </a>
      </div>
       
      <div
        class="navbar-default"
      >
        <ul
          class="navbar-nav me-auto mt-2 mt-lg-0"
        >
          <li
            class="current"
          >
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
  </nav>
   
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    <div
      class="nav-menu-container"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Navbar and secondary navbar navbar with site nav button 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-left"
      >
        <a
          class="navbar-brand"
          href="#"
          title="Home"
        >
          Your Logo
        </a>
      </div>
       
      <div
        class="navbar-default"
      >
        <ul
          class="navbar-nav me-auto mt-2 mt-lg-0"
        >
          <li
            class="current"
          >
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
  </nav>
   
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    <div
      class="nav-menu-container"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`Navbar and secondary navbar navbar without site and page nav buttons 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-left"
      >
        <a
          class="navbar-brand"
          href="#"
          title="Home"
        >
          Your Logo
        </a>
      </div>
       
      <div
        class="navbar-default"
      >
        <ul
          class="navbar-nav me-auto mt-2 mt-lg-0"
        >
          <li
            class="current"
          >
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
  </nav>
   
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    <div />
  </div>
</div>
`;
